# nav_mpc

./: .gitignore  README.md  main.py  requirements.txt
constraints/: constraints.py  sys_constraints.py
constraints/collision_constraints/: halfspace_corridor.py
constraints/system_constraints/: double_pendulum_sys_constraints.py  (+3 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
models/: double_pendulum_model.py  dynamics.py  simple_pendulum_model.py  simple_rover_model.py  unicycle_kinematic_model.py  waveshare_rover_model.py
mpc2qp/: __init__.py  qp_offline.py  qp_offline_fast.py  qp_online.py  qp_online_fast.py
nav_mpc_ros/: package.xml  setup.py
nav_mpc_ros/launch/: nav_mpc_hdw.launch.py  nav_mpc_sim.launch.py
nav_mpc_ros/nav_mpc_ros/: ros_paths.py
nav_mpc_ros/nav_mpc_ros/nodes/: lidar_node.py  nav_mpc_node.py  path_node.py  sim_node.py
nav_mpc_ros/rviz/: nav_mpc_sim.rviz
nav_mpc_ros/urdf/: simple_robot.urdf  simple_rover.urdf
objectives/: double_pendulum_objective.py  objectives.py  rover_path_tracking_objective.py  simple_pendulum_objective.py  simple_rover_objective.py  unicycle_path_tracking_objective.py  waveshare_rover_set_point_objective.py
planner/: planner.py
problem_setup/: setup_double_pendulum.py  setup_path_tracking_rover.py  setup_path_tracking_unicycle.py  setup_simple_pendulum.py  setup_simple_rover.py
qp_formulation/: qp_formulation.py
simulation/: simulator.py
utils/: compare_npz.py  debug_compare_npz.py  debug_dump.py  online_logger.py  print_solution.py  profiling.py  system_info.py
(+56 files in other folders)
